--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "weixin-js-sdk": "^1.4.0-test",
-    "workbox-webpack-plugin": "4.2.0"
+    "workbox-webpack-plugin": "4.2.0",
+    "xesjsbridge": "^1.0.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
